# agents

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
core/: Cargo.toml  README.md
core/examples/: message_injection.rs  multi_turn_cli.rs  single_turn_cli.rs
core/src/: error.rs  hook.rs  lib.rs  prelude.rs
core/src/agent/: builder.rs  mod.rs
core/src/agent/base/: agent.rs  mod.rs
core/src/agent/plan/: agent.rs  mod.rs
core/src/agent/subagent/: mod.rs  registry.rs
core/src/agent/team/: agent.rs  bus.rs  message.rs  mod.rs
core/src/llm/: adapter.rs  mod.rs  state.rs
core/src/provider/: embedding.rs  mod.rs  openai.rs  semaphore.rs
core/src/runtime/: mod.rs  selector.rs
core/src/schema/: mod.rs
core/src/schema/common/: config.rs  event.rs  message.rs  mod.rs
core/src/schema/extension/: mod.rs  skill.rs  storage.rs
core/src/tools/: mod.rs  policy.rs  process.rs  registry.rs
core/src/utils/: mod.rs
craft/: Cargo.toml  README.md
craft/examples/: basic_agent.rs  cost_tracking.rs  craft_cli.rs  custom_hook.rs
craft/src/: context.rs  cost.rs  lib.rs  memory.rs  prelude.rs  skill.rs
craft/src/tools/: fs.rs  mod.rs
