[workspace]
resolver = "3"
members = ["core", "craft"]

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
