[package]
name = "yoakore"
version = "0.2.0"
edition = "2024"
authors = ["Yoak3n"]
description = "A modular, extensible foundation for building AI agents in Rust"
license = "MIT"
repository = "https://github.com/Yoak3n/agents"
readme = "README.md"
keywords = ["agent", "llm", "ai", "tool-use", "openai"]
categories = ["development-tools", "api-bindings"]


[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
log.workspace = true
futures.workspace = true
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-core = "0.3"
bytes = "1"
async-trait = "0.1"

rusqlite = { version = "0.35", features = ["bundled"] ,optional = true}
serde_yml = {version = "0.0.12" ,optional = true}
dirs = {version = "6", optional = true}


[features]
default = []
skills = ["serde_yml"]
storage = ["rusqlite", "dirs"]
extension = ["skills", "storage"]


[[example]]
name = "single_turn_cli"

[[example]]
name = "message_injection"

[[example]]
name = "multi_turn_cli"